# ray-tracer

./: CMakeLists.txt  README.md
notes/: notes.tex
src/: main.cc  main.cpp
src/distributions/: BeckmannFresnelPDF.h  BeckmannPDF.h  CosinePDF.cc  CosinePDF.h  MixturePDF.cc  MixturePDF.h  SpherePDF.h  SurfacePDF.cc  SurfacePDF.h  UniformPDF.h
src/engine/: AABB.cc  AABB.h  BVHNode.cc  BVHNode.h  Camera.cc  Camera.cpp  Camera.h  Color.h  CosinePDF.cc  CosinePDF.h  Fresnel.cc  Fresnel.h  Material.cc  Material.h  Microfacet.cc  Microfacet.h  MixturePDF.h  ONB.cc  ONB.h  Object.h  PDF.h  Ray.cc  Ray.h  Record.h  ScatterRecord.h  Scene.cc  Scene.h  Spectrum.cc  Spectrum.h  Surface.cc  Surface.h  SurfacePDF.cc  SurfacePDF.h  Texture.h  Utils.h  Vec3.cc  Vec3.h
src/geometry/: AABB.cc  AABB.h  AARect.cc  AARect.h  Box.cc  Box.h  ConstantMedium.cc  ConstantMedium.h  FlipNormals.cc  FlipNormals.h  Mesh.cpp  Mesh.h  MovingSphere.cc  MovingSphere.h  ONB.cc  ONB.h  Object.h  Plane.cpp  Plane.h  PointRecord.h  Ray.cc  Ray.cpp  Ray.h  Rotate.cc  Rotate.h  Sphere.cc  Sphere.cpp  Sphere.h  Surface.cc  Surface.h  Translate.cc  Translate.h  Triangle.cpp  Triangle.h  TriangleList.h  Vec3.cc  Vec3.cpp  Vec3.h
src/light/: Color.h  Radiance3.h
src/materials/: Color.h  Dielectric.cc  Dielectric.h  DiffuseLight.cc  DiffuseLight.h  Isotropic.cc  Isotropic.h  Lambertian.cc  Lambertian.h  Material.h  Metal.cc  Metal.h  MicrofacetReflection.h  MicrofacetTransmission.h  OrenNayar.h  SolidColor.h  Texture.h  TorranceSparrow.h
src/primitives/: AARect.cc  AARect.h  Box.cc  Box.h  MovingSphere.h  (+5 more)
(+28 files in other folders)
